# ios-health

./: .env.example  .gitignore  README.md  app.py  datamodels.py  db.py  git_commit_scheduler.py  health_dumps.db  ios_health_dump.py  pyproject.toml
.cursor/commands/: arduino.md
data/: health_metrics_20160226_20260105.csv
install/: install.sh  projects_ios-health-dump.service  projects_ios-health-dump_scheduler.service  projects_ios-health.service  projects_ios-health_data-backup-scheduler.service
src/: app.py  config.py  data_backup_scheduler.py  datamodels.py  db.py  health_goals.py  ios_health_dump.py  summary_notifier.py
static/css/: styles.css
static/js/: compare.js  dashboard.js
templates/: compare.html  index.html
tests/: conftest.py  test_app.py  test_config.py  test_data_backup_scheduler.py  test_datamodels.py  test_db.py  test_integration.py  test_ios_health_dump.py  test_summary_notifier.py
