[project]
name = "ios-health"
version = "0.1.0"
description = "Data visualization for data scraped from iOS Health App via a shortcut"
authors = [{name = "Mohit Nalavadi"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0.0",
    "requests",
    "pytz",
    "joblib",
    "schedule>=1.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "black",
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "tqdm>=4.67.1",
    "isort>=7.0.0",
    "typer>=0.9.0",
]

[tool.config]
flask_port = 5009
database_path = "health_dumps.db"
# Goal outlier caps: values above these are excluded when computing goal averages
goal_outlier_steps_max = 18000
goal_outlier_km_max = 15
goal_outlier_flights_max = 20
goal_outlier_kcals_max = 600

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
app = "src.app:main"
config = "src.config:main"

[tool.black]
line-length = 110
target-version = ['py312']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.isort]
force_single_line = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-s -v --cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
